@@ -1,5 +1,11 @@
 2007-11-22  Neal H. Walfield  <neal@gnu.org>
 
+	* cap.h (cap_copy_x): Use CAP_COPY_COPY_ADDR_TRANS_GUARD, not
+	CAP_COPY_COPY_GUARD.  Use CAP_COPY_COPY_ADDR_TRANS_SUBPAGE, not
+	Use CAP_COPY_COPY_SUBPAGE.  Support CAP_COPY_COPY_SOURCE_GUARD.
+
+2007-11-22  Neal H. Walfield  <neal@gnu.org>
+
 	* rpc.h (RPC_UNMARSHAL): Only assert that IDX is equal to the
 	number of untyped words if the error code is 0.
 
